2011-10-03  Araki Ken  <arakiken@users.sf.net>

	* im_ibus.c: A result of ibus_input_context_is_enabled() is cached in
	  im_ibus_t.

	* x_window_cairo.c: 0x80 - 0xff characters are converted to UTF-8 in
	  x_window_cairo_draw_string8().

2011-10-02  Araki Ken  <arakiken@users.sf.net>

	* x_font_ft.c: CAIRO_HINT_METRICS_OFF is not applied in cairo_font_open().
	
	* gtk/vte.c: If font size is changed, gtk_widget_queue_resize_no_redraw()
	  is called in vte_terminal_set_font_from_string().

2011-09-29  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, README.ja, README.indic, ReleaseNote: Updated.

	* x_screen.c: -V option is no longer automatically turned on to show
	  indic characters.

	* x_font_fc.c, x_font.c: If minus value is returned as text width,
	  xxx_calculate_char_width() returns 0 instead.

	* ml_line_iscii.c: A line who contains indic characters is forced to
	  be redrawn to EOL in ml_line_iscii_render().

	* ml_line.c: If end_char_index argument of ml_line_set_modified() is larger
	  than line->num_of_filled_chars, ml_line_is_cleared_to_end() returns true.

	* x_font.c: ISCII font is always loaded as variable column width one.

2011-09-27  Araki Ken  <arakiken@users.sf.net>

	* version.h.in: 3.0.8 => 3.0.8 post

	* gtk/Makefile.in: @GTK_LIBS@ is added.

	* doc/ja/FAQ, doc/ja/README.fontproto, doc/term/README.term: Updated.

2011-09-24  Araki Ken  <arakiken@users.sf.net>

	* 3.0.8 released.
	  (tag "rel-3_0_8")

	* configure.in, mlterm.spec, xwindow/version.h.in,
	  doc/en/ReleaseNote: updated for 3.0.8.

	* man/mlterm.1, README.ja, etc/main, etc/main.ja: Updated.

	* x_main_config.c: Default value of "use_ind" option is changed from
	  true to false.

	* mc_char_encoding.c: ISCII-XXX encodings are added.

2011-09-23  Araki Ken  <arakiken@users.sf.net>

	* ml_logical_visual.c: u_int -> int in container_delete() and container_logical().

	* ml_edit.c: ml_edit_set_absolute_origin() sets edit->is_relative=0.
	  (Thanks to Konosuke Watanabe san)
